--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,13 +15,7 @@ jobs:
       run: pub get
     - name: Generate env file
       env:
-        SPOTIFY_ID: ${{ secrets.SPOTIFY_ID }}
-        SPOTIFY_SECRET: ${{ secrets.SPOTIFY_SECRET }}
-        TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
-        TWITTER_SECRET_KEY: ${{ secrets.TWITTER_SECRET_KEY }}
-        TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
-        TWITTER_TOKEN_SECRET: ${{ secrets.TWITTER_TOKEN_SECRET }}
-        TELEGRAM_API_KEY: ${{ secrets.TELEGRAM_API_KEY }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: dart .tool/env_service.dart
     - name: Lint analyze
       run: dart analyze
