--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,14 +10,14 @@ jobs:
     container:
       image:  google/dart:latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: pub get
-    - name: Generate env file
+    - name: Configure enviroment
+      uses: actions/checkout@v2 
+    - run: dart .tool/env_service.dart
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: dart .tool/env_service.dart
-    - name: Lint analyze
+    - name: Install dependencies
+      run: pub get
+    - name: Code lint analyze
       run: dart analyze
     - name: Tests
       run: dart test
