--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
 name: flutter_alien
-description: A new Flutter package project.
-version: 0.0.1
+description: Get info about Flutter social media
+version: 0.1.0
 author: deandreamatias
 homepage: https://universoflutter.com
+repository: https://github.com/flutteruniverse/flutter-alien
+issue_tracker: https://github.com/flutteruniverse/flutter-alien/issues
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -13,5 +15,5 @@ dependencies:
   xml: ^4.5.0
 
 dev_dependencies:
-  pedantic: ^1.9.2
+  effective_dart: ^1.3.0
   test: ^1.15.7
