--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_alien
-description: Get info about Flutter social media
+description: Get info about some social medias. Create to Universo Flutter
 version: 0.1.0
 homepage: https://universoflutter.com
 repository: https://github.com/flutteruniverse/flutter-alien
