--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,7 @@ name: flutter_alien
 description: Get info about some social medias. Create to Universo Flutter
 version: 0.1.1
 homepage: https://universoflutter.com
-repository: https://github.com/flutteruniverse/flutter-alien
-issue_tracker: https://github.com/flutteruniverse/flutter-alien/issues
+maintainer: Matias de Andrea (@deandreamatias)
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
