--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ environment:
 dependencies:
   dart_rss: ^1.1.1+1
   http: ^0.12.2
+  intl: ^0.16.1
   xml: ^4.5.0
+  youtube_explode_dart: ^1.7.5
 
 dev_dependencies:
   effective_dart: ^1.3.0
