--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,10 +11,10 @@ jobs:
     name: Test package
     runs-on: ubuntu-latest
     container:
-      image:  google/dart:latest
+      image:  google/dart:2.8.0
     steps:
     - name: Configure enviroment
-      uses: actions/checkout@v2 
+      uses: actions/checkout@v3
     - run: dart .tool/env_service.dart
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -28,14 +28,12 @@ jobs:
     needs: build
     name: Deploy package
     runs-on: ubuntu-latest
+    container:
+      image:  google/dart:2.8.0
 
     steps:
     - name: Configure enviroment
       uses: actions/checkout@v3
-    - name: Download flutter
-      uses: subosito/flutter-action@v2.4.0
-      with:
-        channel: 'stable'
     - name: Setup pub credentials
       shell: bash
       env:
