ci: Fix dart analyze command

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: pub get
     - name: Code lint analyze
-      run: dart analyze
+      run: dart analyze .
 
   deployment:
     if: ${{ github.ref_type == 'tag' }}
