--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,17 +3,18 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_alien:
     path: ../
-  url_launcher: ^5.7.10
+  url_launcher: ^6.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
 flutter:
   uses-material-design: true
