--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,15 @@ homepage: https://universoflutter.com
 maintainer: Matias de Andrea (@deandreamatias)
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
-  dart_rss: ^1.1.1+1
-  http: ^0.12.2
-  intl: ^0.16.1
-  xml: ^4.5.0
-  youtube_explode_dart: ^1.7.5
+  dart_rss: ^2.0.1
+  http: ^0.13.4
+  intl: ^0.17.0
+  xml: ^5.3.1
+  youtube_explode_dart: ^1.11.0
 
 dev_dependencies:
-  effective_dart: ^1.3.0
-  test: ^1.15.7
+  effective_dart: ^1.3.2
+  test: ^1.21.3
