--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,30 +11,32 @@ jobs:
   build:
     name: Test package
     runs-on: ubuntu-latest
-    container:
-      image:  google/dart:2.8
+
     steps:
     - name: Configure enviroment
       uses: actions/checkout@v3
-    - run: dart .tool/env_service.dart
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Flutter action
+      uses: subosito/flutter-action@v2
+      with:
+        version: 2.10.5
     - name: Install dependencies
-      run: pub get
+      run: flutter pub get
     - name: Code lint analyze
-      run: dart analyze .
+      run: flutter analyze
 
   deployment:
     if: ${{ github.ref_type == 'tag' }}
     needs: build
     name: Deploy package
     runs-on: ubuntu-latest
-    container:
-      image:  google/dart:2.8.0
 
     steps:
     - name: Configure enviroment
       uses: actions/checkout@v3
+    - name: Flutter action
+      uses: subosito/flutter-action@v2
+      with:
+        version: 2.10.5
     - name: Setup pub credentials
       shell: bash
       env:
